--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>AM Twitter Connections v1.0</title>
+        <title>Jewish Cafe Network Visualization</title>
         <link rel="stylesheet" href="style.css">
         <script src="//d3js.org/d3.v4.min.js"></script>
     </head>
