--- a/viz2.html
+++ b/viz2.html
@@ -88,7 +88,7 @@
             <img src="example_of_grab.png" style ="border: 2px solid">
             <br >
             <br >
-            Many nodes have additional content within our Scalar book, which you can explore further by the link on the right-hand side.
+            Many nodes have additional content within our Scalar book, which you can explore further by the link on the right-hand side. These nodes appear as turquoise circles.
             <br >
 
 
