--- a/viz2.html
+++ b/viz2.html
@@ -21,22 +21,24 @@
 
     .overlay-box {
       margin: 10%;
-      padding: 10px;
+      padding: 6px;
       border-radius: 5px;
       background-color: rgba(255, 255, 255, 1); /* Black w/opacity */
     }
     .overlay-box a {
       padding: 5%;
-      font-size: 20px;
       text-decoration: none;
+      color: #3c39db;
     }
     .overlay-box h2 {
       text-align: center;
       margin: 8px;
     }
-
+    /* .scalarLink {
+      font-size: 2.8em ;
+    } */
     #sidebar-content {
-      margin: 10%;
+      margin: 5% 10%;
       padding: 10px;
       line-height: 1.3;
       border-radius: 5px;
@@ -76,21 +78,16 @@
           </div>
           <hr>
           <div>
-            This tool represents <b>individuals</b> (such as writers, café owners, famous community members), <b>cafés</b>, and <b>cities</b> that appear throughout the Jewish Cafés project. Here, we visualize these individuals, cafés, and cities in a network graph as points or <b>nodes</b>.
-            <br >
-            <br >
-            <b>Relationships</b> between individuals/cafés/cities (such as a known association between a regular café-goer and a specific café) are represented as lines or <b>edges</b>. Together, these nodes and edges constitute a single diasporic <b>network</b> of Jewish café communities in the nineteenth and twentieths centuries.
-
-            <br >
-            <br >
-            Try clicking on a specific node to learn more about that item, and see which other items are closely related (these other nodes will become larger and more visible as you grab onto a node). 
+            This tool lets you explore <b>individuals</b> (such as writers, café owners, famous community members), <b>cafés</b>, and <b>cities</b> that appear throughout the Jewish Cafés project. Here, we visualize these individuals, cafés, and cities as a  <b>network of connectionsnodes</b>.
             <br >
             <br >
             <img src="example_of_grab.png" style ="border: 2px solid">
             <br >
             <br >
-            Many nodes have additional content within our Scalar book, which you can explore further by the link on the right-hand side. These nodes appear as turquoise circles.
+            Many nodes have additional content within our Scalar book, which you can explore further by the link on the right-hand side. These nodes appear as large circles.
             <br >
+            <br >
+
 
 
 
@@ -225,7 +222,7 @@
             .on("end", dragended))
 
     if (!currentlyDragging){
-        d3.select(canvas).call(d3.zoom().scaleExtent([0.5, 4]).on("zoom", zoomed)); }
+        d3.select(canvas).call(d3.zoom().scaleExtent([0.75, 4]).on("zoom", zoomed)); }
         
       d3.select(canvas.nodes).on('mouseover', function(){
         console.log("test!");
@@ -251,8 +248,8 @@
       // Method 1:
       // console.log(d3.zoomTransform(canvas.drawNode()).k);
       // console.log(d3.zoomTransform(canvas.drawLink()).k);
-      d3.zoomTransform(graph.nodes);
-      d3.zoomTransform(graph.links);
+      // d3.zoomTransform(graph.nodes);
+      // d3.zoomTransform(graph.links);
       // Method 2:
       // console.log(k);
 
@@ -273,6 +270,17 @@
       graph.nodes.forEach(drawNode);
       context.closePath();
       context.fill();
+
+      // if(dragSubjectForFade){
+      //   context.fillStyle = 'rgba(0, 128, 128, 0.85)';
+      //   context.beginPath();
+      //   drawNode(dragSubjectForFade);
+      //   context.closePath();
+      //   context.fill();
+
+      // }
+
+
 
       context.fillStyle = 'black';
       context.beginPath();
@@ -312,18 +320,19 @@
       var sidebarHeadline = document.getElementById("sidebar-headline");
       var sidebarLink = document.getElementById("sidebar-link");
 
-      sidebarHeadline.innerHTML = d3.event.subject.name;
+      sidebarHeadline.innerHTML = "";
 
       var linkToScalar = document.createElement("a")
       linkToScalar.setAttribute("href", d3.event.subject.url)
       linkToScalar.setAttribute("target", "_blank");
       linkToScalar.setAttribute("id", "scalarLink");
 
+
       while (sidebarLink.firstChild) {
           sidebarLink.removeChild(sidebarLink.firstChild);}
 
-      sidebarLink.appendChild(linkToScalar);
-      document.getElementById("scalarLink").innerHTML = "View the full page"
+      sidebarHeadline.appendChild(linkToScalar);
+      document.getElementById("scalarLink").innerHTML = d3.event.subject.name;
 
       if(d3.event.subject.extraData == "yes"){
           document.getElementById("sidebar-content").classList.add("active");
@@ -388,7 +397,9 @@
     // draw nodes that are either being dragged or immediate neighbor
 
     if (currentlyDragging)
-      { if (d != dragSubjectForFade) 
+      { 
+        
+        if (d != dragSubjectForFade) 
           {   if (isConnected(d, dragSubjectForFade)) context.arc(d.x, d.y, 3, 0, 2 * Math.PI);
           } else 
             {
