edited description text

--- a/viz2.html
+++ b/viz2.html
@@ -81,6 +81,9 @@
             This tool lets you explore <b>individuals</b> (such as writers, café owners, famous community members), <b>cafés</b>, and <b>cities</b> that appear throughout the Jewish Cafés project. Here, we visualize these individuals, cafés, and cities as a  <b>network of connectionsnodes</b>.
             <br >
             <br >
+            See more of the map by zooming with touch gestures/a scroll wheel, or clicking and dragging blank spaces to reposition the network.
+            <br >
+            <br >
             <img src="example_of_grab.png" style ="border: 2px solid">
             <br >
             <br >
